feat(actions): setup key and from for send
